tests/ui-fulldeps/session-diagnostic/subdiagnostic-derive.stderr
error: label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:51:1
   |
LL | #[label(no_crate_example)]
   | ^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:58:1
   |
LL | #[label]
   | ^

error: `#[foo]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:67:1
   |
LL | #[foo]
   | ^

error: `#[label = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:78:1
   |
LL | #[label = "..."]
   | ^

error: only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:87:9
   |
LL | #[label(bug = "...")]
   |         ^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:87:1
   |
LL | #[label(bug = "...")]
   | ^

error: only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:107:9
   |
LL | #[label(slug = 4)]
   |         ^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:107:1
   |
LL | #[label(slug = 4)]
   | ^

error: only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:117:9
   |
LL | #[label(slug("..."))]
   |         ^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:117:1
   |
LL | #[label(slug("..."))]
   | ^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:137:1
   |
LL | #[label()]
   | ^

error: only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:146:27
   |
LL | #[label(no_crate_example, code = "...")]
   |                           ^^^^

error: only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:155:27
   |
LL | #[label(no_crate_example, applicability = "machine-applicable")]
   |                           ^^^^^^^^^^^^^

error: unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:164:1
   |
LL | #[foo]
   | ^

error: `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:179:5
   |
LL |     #[bar]
   |     ^

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:192:5
   |
LL |     #[bar = "..."]
   |     ^

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:205:5
   |
LL |     #[bar = 4]
   |     ^

error: `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:218:5
   |
LL |     #[bar("...")]
   |     ^

error: only `no_span` is a valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:231:13
   |
LL |     #[label(code = "...")]
   |             ^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:231:5
   |
LL |     #[label(code = "...")]
   |     ^

error: the `#[primary_span]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:260:5
   |
LL |     #[primary_span]
   |     ^

error: label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:257:1
   |
LL | #[label(no_crate_example)]
   | ^

error: `#[applicability]` is only valid on suggestions
  --> $DIR/subdiagnostic-derive.rs:270:5
   |
LL |     #[applicability]
   |     ^

error: `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:280:5
   |
LL |     #[bar]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:292:5
   |
LL |     #[bar = "..."]
   |     ^

error: `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:304:5
   |
LL |     #[bar("...")]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: a diagnostic slug must be the first argument to the attribute
  --> $DIR/subdiagnostic-derive.rs:337:44
   |
LL | #[label(no_crate_example, no_crate::example)]
   |                                            ^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:350:5
   |
LL |     #[primary_span]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:347:5
   |
LL |     #[primary_span]
   |     ^

error: subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive.rs:356:8
   |
LL | struct AG {
   |        ^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:393:46
   |
LL | #[suggestion(no_crate_example, code = "...", code = "...")]
   |                                              ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:393:32
   |
LL | #[suggestion(no_crate_example, code = "...", code = "...")]
   |                                ^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:411:5
   |
LL |     #[applicability]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:408:5
   |
LL |     #[applicability]
   |     ^

error: the `#[applicability]` attribute can only be applied to fields of type `Applicability`
  --> $DIR/subdiagnostic-derive.rs:421:5
   |
LL |     #[applicability]
   |     ^

error: suggestion without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:434:1
   |
LL | #[suggestion(no_crate_example)]
   | ^

error: invalid applicability
  --> $DIR/subdiagnostic-derive.rs:444:62
   |
LL | #[suggestion(no_crate_example, code = "...", applicability = "foo")]
   |                                                              ^^^^^

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:462:1
   |
LL | #[suggestion(no_crate_example, code = "...")]
   | ^

error: unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:476:1
   |
LL | #[label]
   | ^

error: `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:496:39
   |
LL | #[suggestion(no_crate_example, code = "{var}", applicability = "machine-applicable")]
   |                                       ^^^^^^^

error: `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:515:43
   |
LL |     #[suggestion(no_crate_example, code = "{var}", applicability = "machine-applicable")]
   |                                           ^^^^^^^

error: `#[suggestion_part]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:538:5
   |
LL |     #[suggestion_part]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions, use `#[primary_span]` instead

error: `#[suggestion_part(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:541:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:535:1
   |
LL | #[suggestion(no_crate_example, code = "...")]
   | ^

error: invalid nested attribute
  --> $DIR/subdiagnostic-derive.rs:550:42
   |
LL | #[multipart_suggestion(no_crate_example, code = "...", applicability = "machine-applicable")]
   |                                          ^^^^
   |
   = help: only `no_span`, `style` and `applicability` are valid nested attributes

error: multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:550:1
   |
LL | #[multipart_suggestion(no_crate_example, code = "...", applicability = "machine-applicable")]
   | ^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:560:5
   |
LL |     #[suggestion_part]
   |     ^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:568:5
   |
LL |     #[suggestion_part()]
   |     ^

error: `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:577:5
   |
LL |     #[primary_span]
   |     ^
   |
   = help: multipart suggestions use one or more `#[suggestion_part]`s rather than one `#[primary_span]`

error: multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:574:1
   |
LL | #[multipart_suggestion(no_crate_example)]
   | ^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:585:5
   |
LL |     #[suggestion_part]
   |     ^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:588:5
   |
LL |     #[suggestion_part()]
   |     ^

error: `code` is the only valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:591:23
   |
LL |     #[suggestion_part(foo = "bar")]
   |                       ^^^

error: the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:596:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^

error: the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:599:5
   |
LL |     #[suggestion_part()]
   |     ^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:607:37
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                                     ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:607:23
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                       ^^^^

error: `#[applicability]` has no effect if all `#[suggestion]`/`#[multipart_suggestion]` attributes have a static `applicability = "..."`
  --> $DIR/subdiagnostic-derive.rs:636:5
   |
LL |     #[applicability]
   |     ^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:684:34
   |
LL |     #[suggestion_part(code("foo"))]
   |                                  ^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:695:41
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                                         ^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:706:30
   |
LL |     #[suggestion_part(code(3))]
   |                              ^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:717:29
   |
LL |     #[suggestion_part(code())]
   |                             ^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:772:1
   |
LL | #[suggestion(no_crate_example, code = "", style = "hidden", style = "normal")]
   | ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:772:1
   |
LL | #[suggestion(no_crate_example, code = "", style = "hidden", style = "normal")]
   | ^

error: `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:781:1
   |
LL | #[suggestion_hidden(no_crate_example, code = "")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:789:1
   |
LL | #[suggestion_hidden(no_crate_example, code = "", style = "normal")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: invalid suggestion style
  --> $DIR/subdiagnostic-derive.rs:797:51
   |
LL | #[suggestion(no_crate_example, code = "", style = "foo")]
   |                                                   ^^^^^
   |
   = help: valid styles are `normal`, `short`, `hidden`, `verbose` and `tool-only`

error: expected `= "xxx"`
  --> $DIR/subdiagnostic-derive.rs:805:49
   |
LL | #[suggestion(no_crate_example, code = "", style = 42)]
   |                                                 ^

error: a diagnostic slug must be the first argument to the attribute
  --> $DIR/subdiagnostic-derive.rs:813:48
   |
LL | #[suggestion(no_crate_example, code = "", style)]
   |                                                ^

error: expected `= "xxx"`
  --> $DIR/subdiagnostic-derive.rs:821:48
   |
LL | #[suggestion(no_crate_example, code = "", style("foo"))]
   |                                                ^

error: `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:834:5
   |
LL |     #[primary_span]
   |     ^
   |
   = note: there must be exactly one primary span
   = help: to create a suggestion with multiple spans, use `#[multipart_suggestion]` instead

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:831:1
   |
LL | #[suggestion(no_crate_example, code = "")]
   | ^

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:97:9
   |
LL | #[label("...")]
   |         ^^^^^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:321:1
   |
LL | union AC {
   | ^^^^^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:591:27
   |
LL |     #[suggestion_part(foo = "bar")]
   |                           ^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:684:28
   |
LL |     #[suggestion_part(code("foo"))]
   |                            ^^^^^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:695:28
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                            ^^^^^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:706:28
   |
LL |     #[suggestion_part(code(3))]
   |                            ^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:729:30
   |
LL |     #[suggestion_part(code = 3)]
   |                              ^ you might be missing a crate named `core`

error[E0433]: cannot find item `core` in the crate root
  --> $DIR/subdiagnostic-derive.rs:821:48
   |
LL | #[suggestion(no_crate_example, code = "", style("foo"))]
   |                                                ^ you might be missing a crate named `core`

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:67:3
   |
LL | #[foo]
   |   ^^^ not found in this scope

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:164:3
   |
LL | #[foo]
   |   ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:179:7
   |
LL |     #[bar]
   |       ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:192:7
   |
LL |     #[bar = "..."]
   |       ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:205:7
   |
LL |     #[bar = 4]
   |       ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:218:7
   |
LL |     #[bar("...")]
   |       ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:280:7
   |
LL |     #[bar]
   |       ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:292:7
   |
LL |     #[bar = "..."]
   |       ^^^ not found in this scope

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:304:7
   |
LL |     #[bar("...")]
   |       ^^^ not found in this scope

error[E0425]: cannot find value `slug` in module `crate::fluent_generated`
  --> $DIR/subdiagnostic-derive.rs:127:9
   |
LL | #[label(slug)]
   |         ^^^^ not found in module `crate::fluent_generated`

error[E0425]: cannot find value `__code_29` in this scope
  --> $DIR/subdiagnostic-derive.rs:723:10
   |
LL | #[derive(Subdiagnostic)]
   |          ^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the derive macro `Subdiagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 86 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
